--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -41,7 +41,7 @@
     </div>
     <ul id="menu">
       <li><a href="#title, #content_wrapper">Story</a></li>
-      <li><a href="#character_panel">Character</a></li>
+      <li><a href="#character_panel">Rocío</a></li>
       <li><a href="#info_panel">Info</a></li>
     </ul>
 
@@ -51,22 +51,21 @@
         <div id="info_panel" class="tools left">
 
           <!-- Game Background: edit this -->
-          <h1>Undum</h1>
+          <h1>¿Un buen insomio o un mal despertar?</h1>
           <p>
-            Undum is a pure client-side game framework for narrative
-            interactive fiction. It is designed for HTML&#x200A;5 and
-            CSS&#x200A;3. You can read more and download the source
-            code <a href="http://github.com/idmillington/undum">here</a>.
+            Si estás leyendo esto es porque te ha llamado la atención el título. Pues esta es tu historia. 
+            Te podría contar con más o menos gracia de qué va la cosa, para que te hicieras una ida: 
+            que si la protagonista, yo, soy muy maja, que si estudio ingeniería informática y algunas noches no duermo del todo bien...
           </p>
           <!-- End of Game Background -->
 
           <div class='buttons'>
-            <button id="save">Save</button><button id="erase">Erase</button>
+            <button id="save">Guardar</button><button id="erase">Borrar</button>
           </div>
         </div>
 
         <div id="character_panel" class="tools right">
-          <h1>Character</h1>
+          <h1>Rocío</h1>
           <div id="character">
             <div id="character_text">
               <div id="character_text_content"></div>
@@ -81,14 +80,14 @@
           <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>The Undum Tutorial <span class='fancy'>&amp;</span><br>
-              Interactive Example</h1>
-            <h2>by I D Millington</h2>
+            <h1>¿Un buen insomio o un mal despertar?<span class='fancy'>&amp;</span><br>
+              Juego interactivo</h1>
+            <h2>Realizado por Rocío Domingo Aguilar</h2>
             <!-- End of Game Title -->
 
             <noscript><p class="noscript_message">This game requires 
               Javascript.</p></noscript>
-            <p class="click_message">click to begin</p>
+            <p class="click_message">¡Comenzar!</p>
           </div>
         </div>
 
