Modificado tutorial.en.html

--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <!-- Game Title: edit this -->
     <title>Undum</title>
+    <title>Practica2</title>
     <!-- End of Game Title -->
 
     <!-- Remove this if you don't use the Tangerine font in your
@@ -39,7 +40,7 @@
         <a href="#" class="button" id="menu-button">Menu</a>
       </div>
     </div>
-    <ul id="menu">
+    <ul id="menu" style="top: -138px;">
       <li><a href="#title, #content_wrapper">Story</a></li>
       <li><a href="#character_panel">Rocío</a></li>
       <li><a href="#info_panel">Info</a></li>
@@ -53,8 +54,8 @@
           <!-- Game Background: edit this -->
           <h1>¿Un buen insomio o un mal despertar?</h1>
           <p>
-            Si estás leyendo esto es porque te ha llamado la atención el título. Pues esta es tu historia. 
-            Te podría contar con más o menos gracia de qué va la cosa, para que te hicieras una ida: 
+            Si estás leyendo esto es porque te ha llamado la atención el título. Pues esta es tu historia.
+            Te podría contar con más o menos gracia de qué va la cosa, para que te hicieras una ida:
             que si la protagonista, yo, soy muy maja, que si estudio ingeniería informática y algunas noches no duermo del todo bien...
           </p>
           <!-- End of Game Background -->
@@ -69,6 +70,7 @@
           <div id="character">
             <div id="character_text">
               <div id="character_text_content"></div>
+				<p>Comienza la aventura</p>
             </div>
             <div id="qualities"></div>
           </div>
@@ -76,7 +78,7 @@
       </div> <!-- End of div.tools_wrapper -->
 
       <div id="mid_panel">
-        <div id="title">
+        <div id="title" style="cursor: default;">
           <div class="label">
 
             <!-- Game Title: edit this -->
@@ -85,14 +87,26 @@
             <h2>Realizado por Rocío Domingo Aguilar</h2>
             <!-- End of Game Title -->
 
-            <noscript><p class="noscript_message">This game requires 
+            <noscript><p class="noscript_message">This game requires
               Javascript.</p></noscript>
-            <p class="click_message">¡Comenzar!</p>
+            <p class="click_message" style="display: none;">¡Comenzar!</p>
           </div>
         </div>
 
-        <div id="content_wrapper">
-          <div id="content">
+        <div id="content_wrapper" style="display: block;">
+          <div id="content" style="">
+			<h1>Insomio por qué no te mueres</h1>
+			<p>¿Nada es tan bonito como en sueños o ningún sueño es más bonito que lo que puedes hacer en realidad?</p>
+			<hr>
+			<p>
+				Despierto sudada y temblando. Respiro profundamente varias veces para calmarme, abriendo mucho la boca para no hacer el menor ruido. Estoy mareada. La luz de la luna me ilumina la cara. Escucho un ruido. Creo que viene de debajo de mi cama, tengo miedo. Realmente estoy asustada.
+			</p>
+			<p>
+				<a href="opcion1">¿Me asomo?</a>
+				¿Cómo me trago el miedo?
+				<a href="opcion2">¿O ese ruido es fruto de mi imaginación?</a>
+
+
           </div>
           <a name="end_of_content"></a>
         </div>
