Modificación del título

--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- Game Title: edit this -->
-    <title>Undum</title>
+    <title>Practica2</title>
     <title>Practica2</title>
     <!-- End of Game Title -->
 
@@ -83,11 +83,12 @@
 
             <!-- Game Title: edit this -->
             <h1>¿Un buen insomio o un mal despertar?<span class='fancy'>&amp;</span><br>
-              Juego interactivo</h1>
+              </h1>
             <h2>Realizado por Rocío Domingo Aguilar</h2>
             <!-- End of Game Title -->
 
-            <noscript><p class="noscript_message">This game requires
+            <noscript>
+              <p class="noscript_message">This game requires
               Javascript.</p></noscript>
             <p class="click_message" style="display: none;">¡Comenzar!</p>
           </div>
