--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -82,7 +82,7 @@
           <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>¿Un buen insomio o un mal despertar?<span class='fancy'>&amp;</span><br>
+            <h1>¿Un bonito insomio o un mal despertar?<br>
               </h1>
             <h2>Realizado por Rocío Domingo Aguilar</h2>
             <!-- End of Game Title -->
@@ -90,6 +90,7 @@
             <noscript>
               <p class="noscript_message">This game requires
               Javascript.</p></noscript>
+
             <p class="click_message" style="display: none;">¡Comenzar!</p>
           </div>
         </div>
