Cambios en el comienzo

--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -79,7 +79,7 @@
 
       <div id="mid_panel">
         <div id="title" style="cursor: default;">
-          <div class="label">
+          <div class="click_message">
 
             <!-- Game Title: edit this -->
             <h1>¿Un bonito insomio o un mal despertar?<br>
@@ -91,8 +91,6 @@
               <p class="noscript_message">This game requires
               Javascript.</p></noscript>
 
-            <p class="click_message" style="display: none;">¡Comenzar!</p>
-          </div>
         </div>
 
         <div id="content_wrapper" style="display: block;">
