--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -79,10 +79,10 @@
 
       <div id="mid_panel">
         <div id="title" style="cursor: default;">
-          <div class="click_message">
+          <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>¿Un bonito insomio o un mal despertar?<br>
+            <h1>¿Un bonito insomio o un mal despertar?
               </h1>
             <h2>Realizado por Rocío Domingo Aguilar</h2>
             <!-- End of Game Title -->
@@ -90,6 +90,7 @@
             <noscript>
               <p class="noscript_message">This game requires
               Javascript.</p></noscript>
+              <p class="click_message" style="display: none;">¡COMENZAR!</p>
 
         </div>
 
