--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -78,7 +78,7 @@
       </div> <!-- End of div.tools_wrapper -->
 
       <div id="mid_panel">
-        <div id="title" style="cursor: default;">
+        <div id="title">
           <div class="label">
 
             <!-- Game Title: edit this -->
@@ -86,11 +86,11 @@
               </h1>
             <h2>Realizado por Rocío Domingo Aguilar</h2>
             <!-- End of Game Title -->
-            <p class="click_message" style="display: none;">¡COMENZAR!</p>
+
             <noscript>
               <p class="noscript_message">This game requires
               Javascript.</p></noscript>
-
+              <p class="click_message" style="display: block;">¡COMENZAR!</p>
 
         </div>
 
