--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -82,7 +82,8 @@
           <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>¿Un bonito insomio o un mal despertar?
+            <h1>
+              ¿Un bonito insomnio o un mal despertar?
               </h1>
             <h2>Realizado por Rocío Domingo Aguilar</h2>
             <!-- End of Game Title -->
@@ -90,7 +91,8 @@
             <noscript>
               <p class="noscript_message">This game requires
               Javascript.</p></noscript>
-              <p class="click_message" style="display: block;">¡COMENZAR!</p>
+              <p class="click_message" style="display: block;">HAZ CLICK PARA COMENZAR</p>
+            </div>
 
         </div>
 
