--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -93,11 +93,10 @@
               Javascript.</p></noscript>
               <p class="click_message" style="display: block;">HAZ CLICK PARA COMENZAR</p>
             </div>
+          </div>
 
-        </div>
-
-        <div id="content_wrapper" style="display: block;">
-          <div id="content" style="">
+        <div id="content_wrapper">
+          <div id="content">
 			<h1>Insomio por qué no te mueres</h1>
 			<p>¿Nada es tan bonito como en sueños o ningún sueño es más bonito que lo que puedes hacer en realidad?</p>
 			<hr>
@@ -113,17 +112,9 @@
           </div>
           <a name="end_of_content"></a>
         </div>
-
-        <div id="legal">
-          <!-- Your Copyright: edit this -->
-          <p>Content and additional software and design &copy; 2010 IDM.</p>
-          <!-- End of Your Copyright -->
-
-          <!-- This line is totally optional. -->
-          <p>Created with <a href="http://idmillington.github.io/undum/">Undum</a>.</p>
-        </div>
       </div>
-    </div> <!-- End of div.page -->
+    </div>
+    <!-- End of div.page -->
 
     <!-- Holds UI elements that will be cloned and placed in the main
          page. This block itself is always hidden. -->
@@ -159,13 +150,13 @@
          tutorial.game.js file for details of how this is used. -->
     <div id="content_library">
       <div id="s_situations">
-        <h1>Situations</h1>
+        <h1>Situaciones</h1>
         <p>
-          In Undum, all interaction takes place in a situation. You
-          can think of it either as a 'Room' in traditional
-          interactive fiction (although it is less flexible than
-          that), or as a 'Page' in a Choose Your Own Adventure book
-          (though it is more flexible than that).
+          Despierto sudada y temblando.
+          Respiro profundamente varias veces para calmarme, abriendo mucho la boca para no hacer el menor ruido.
+          Estoy mareada. La luz de la luna me ilumina la cara.
+          Escucho un ruido. Creo que viene de debajo de mi cama, tengo miedo. Realmente estoy asustada.
+          ¿Me asomo? ¿Cómo me trago el miedo? ¿O ese ruido es fruto de mi imaginación?
         </p>
         <p>
           At any point, the character is in exactly one situation, and
