--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -77,7 +77,7 @@
           <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>¿UN BONITO INSOMNIO O UN MAL DESPERTAR?<span class='fancy'>&amp;</span><br>
+            <h1>¿UN BONITO INSOMNIO O UN MAL DESPERTAR?<br>
 
             <h2>Realizado por Rocío Domingo Aguilar</h2>
 
