--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -84,7 +84,7 @@
 
             <noscript><p class="noscript_message">This game requires
       End of Game Title        Javascript.</p></noscript>
-            <p class="click_message">HAZ CLICK PARA COMENZAR</p>
+            <p class="click_message" style="display: none;">HAZ CLICK PARA COMENZAR</p>
           </div>
         </div>
 
