--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- Game Title: edit this -->
-    <title>Práctica 2</title>
+    <title>Practica2</title>
     <!-- End of Game Title -->
 
 
