Modifico html mejorado

--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- Game Title: edit this -->
-    <title>Practica2</title>
+    <title>Práctica 2</title>
     <!-- End of Game Title -->
 
 
@@ -53,7 +53,7 @@
             Te podría contar con más o menos gracia de qué va la cosa, para que te hicieras una ida: que si la protagonista,
             yo, soy muy maja, que si estudio ingeniería informática y algunas noches no duermo del todo bien...
           </p>
-          </p>
+
           <!-- End of Game Background -->
 
           <div class='buttons'>
@@ -83,8 +83,9 @@
 
 
             <noscript><p class="noscript_message">This game requires
-      End of Game Title        Javascript.</p></noscript>
-            <p class="click_message" style="display: none;">HAZ CLICK PARA COMENZAR</p>
+              End of Game Title Javascript.</p></noscript>
+
+            <p class="click_message" style="display: block;">HAZ CLICK PARA COMENZAR</p>
           </div>
         </div>
 
