--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -63,7 +63,7 @@
 
         <div id="character_panel" class="tools right">
           <h1>Character</h1>
-          <div id="Pensamientos internos de Ana">
+          <div id="Buenas noches">
             <div id="character_text">
               <div id="character_text_content"></div>
             </div>
@@ -101,7 +101,7 @@
           <!-- End of Your Copyright -->
 
           <!-- This line is totally optional. -->
-          <p>Created with <a href="http://idmillington.github.io/undum/">Undum</a>.</p>
+          <p>Created with <a href="http://idmillington.github.io/undum/">Undum</a></p>
         </div>
       </div>
     </div> <!-- End of div.page -->
