--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -49,9 +49,9 @@
           <!-- Game Background: edit this -->
           <h1>Introducción</h1>
           <p>
-            Si estás leyendo esto es porque te ha llamado la atención el título. Pues esta es tu historia.
-            Te podría contar con más o menos gracia de qué va la cosa, para que te hicieras una ida: que si la protagonista,
-            yo, soy muy maja, que si estudio ingeniería informática y algunas noches no duermo del todo bien...
+            Si estás leyendo esto es porque te ha llamado la atención el título. Pues esta es tu historia.\
+            Te podría contar con más o menos gracia de qué va la cosa, para que te hicieras una ida: que si la protagonista,\
+            yo, soy muy maja, que si estudio ingeniería informática y algunas noches no duermo del todo bien...\
           </p>
 
           <!-- End of Game Background -->
