--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -82,8 +82,7 @@
             <h2>Realizado por Rocío Domingo Aguilar</h2>
 
 
-            <noscript><p class="noscript_message">This game requires
-              End of Game Title Javascript.</p></noscript>
+            <noscript><p class="noscript_message">This game requires End of Game Title Javascript.</p></noscript>
 
             <p class="click_message" style="display: block;">HAZ CLICK PARA COMENZAR</p>
           </div>
